# Gravity-Bridge

./: .build.sh  .gitattributes  .gitignore  docker-compose.yml  go.mod  param-upgrade.json  readme.md  setup-network-fresh.sh  setup-network.sh  start-network.sh
.github/workflows/: automated-release.yml  go.yml  integration-tests.yml  node.js.yml  proto.yml  rust.yml
data/: validator-phrases
data/.gbt/: config.toml  keys.json
docs/: update.txt
docs/design/: ethereum-signing.md  messages.md  mint-lock.md  oracle.md  overview.md  security-features.md
docs/developer/: code-structure.md  e2e-tests.md  environment-setup.md  hotspots.md  integration-tests.md  migrations.md  modifying-integration-tests.md  unit-tests.md  validator-setup.md
e2e/data/: orchestrator-phrases  validator-eth-keys
e2e/hermes-test/: config.toml
module/: .gitignore  .golangci.yml  Dockerfile  Dockerfile.module  Dockerfile.prod  Makefile  README.md  buf.yaml  genesis.json  go.mod  go.sum
module/app/: amino_test.go  ante.go  app.go  app_test.go  assert.go  config.go  encoding.go  export.go  genesis.go  post.go  rapidgen.go  sim_test.go  state.go  test_setup.go  utils.go
module/config/: app_template.go  bech32.go  config.go
module/proto/: buf.gen.gogo.yaml  buf.gen.pulsar.yaml  buf.yaml
module/rbuilder/: Dockerfile  README.md
module/scripts/: proto-tools-installer.sh  protocgen-pulsar.sh  protocgen.sh
orchestrator/: Cargo.toml  Dockerfile  cackle.toml
orchestrator/client/src/: main.rs
orchestrator/cosmos_gravity/: Cargo.toml
orchestrator/cosmos_gravity/src/: lib.rs  proposals.rs  query.rs  send.rs  utils.rs
orchestrator/ethereum_gravity/: Cargo.toml
orchestrator/ethereum_gravity/src/: deploy_erc20.rs  lib.rs  logic_call.rs  message_signatures.rs  send_ERC721_to_cosmos.rs  send_erc721_to_cosmos.rs  send_to_cosmos.rs  submit_batch.rs  utils.rs  valset_update.rs
orchestrator/ethereum_gravity/src/test_cases/: valset_update_test.rs
orchestrator/ethereum_gravity/test_files/: valset_update_rlp
orchestrator/gbt/: Cargo.toml
orchestrator/gbt/src/: args.rs  config.rs  default-config.toml  jsonrpc_server.rs  main.rs  orchestrator.rs  relayer.rs  utils.rs
orchestrator/gbt/src/client/: cosmos_to_eth.rs  deploy_erc20_representation.rs  eth_to_cosmos.rs  ibc_auto_forward.rs  mod.rs  relay_valset.rs  request_all_batches.rs  spot_relay.rs
orchestrator/gbt/src/gov/: mod.rs  proposals.rs  queries.rs
orchestrator/gbt/src/keys/: mod.rs  register_orchestrator_address.rs
orchestrator/gravity_proto/: Cargo.toml
orchestrator/gravity_proto/src/: ethereum_claim.rs  lib.rs
orchestrator/gravity_proto/src/bech32ibc_prost/: bech32ibc.bech32ibc.v1beta1.rs
orchestrator/gravity_proto/src/ethermint_prost/: ethermint.crypto.v1.ethsecp256k1.rs  ethermint.evm.v1.rs  ethermint.feemarket.v1.rs  ethermint.types.v1.rs
orchestrator/gravity_proto/src/prost/: cosmos.bank.v1beta1.rs  gravity.v1.rs  icaauth.v1.rs  orbit.v1.rs
orchestrator/gravity_utils/: Cargo.toml
orchestrator/gravity_utils/src/: connection_prep.rs  error.rs  get_with_retry.rs  lib.rs  num_conversion.rs  prices.rs
orchestrator/gravity_utils/src/types/: batches.rs  config.rs  cross_bridge_balances.rs  erc20.rs  ethereum_events.rs  event_signatures.rs  logic_call.rs  mod.rs  signatures.rs  valsets.rs
orchestrator/jsonrpc_server/: Cargo.toml  README.md
orchestrator/jsonrpc_server/src/: lib.rs  server.rs  tls.rs
orchestrator/metrics_exporter/: Cargo.toml
orchestrator/metrics_exporter/src/: metrics_exporter.rs
orchestrator/orchestrator/: Cargo.toml
orchestrator/orchestrator/examples/: oracle_resync.rs
orchestrator/orchestrator/src/: ethereum_event_watcher.rs  lib.rs  main_loop.rs  oracle_resync.rs
orchestrator/proto_build/: Cargo.toml
orchestrator/proto_build/src/: main.rs
orchestrator/relayer/: Cargo.toml
orchestrator/relayer/examples/: check_batch_executed.rs  check_cosmos_events.rs  check_logic_call_events.rs  check_transaction_batch_events.rs  check_valset_events.rs  get_event_nonce.rs  persistent_valset.rs  send_trc20.rs  tron_rpc.rs  tron_smartcontract.rs
orchestrator/relayer/src/: altruistic.rs  batch_relaying.rs  error.rs  find_latest_valset.rs  ibc_auto_forwarding.rs  lib.rs  logic_call_relaying.rs  main_loop.rs  request_batches.rs  temporary_gas_tracker.rs  valset_relaying.rs
orchestrator/scripts/: build-release.sh
orchestrator/test_runner/: Cargo.toml
orchestrator/test_runner/src/: airdrop_proposal.rs  arbitrary_logic.rs  attestation_validation.rs  auction.rs  batch_stress.rs  batch_timeout.rs  bootstrapping.rs  cosmos_bridgeable_tokens_test.rs  cross_bridge_balances.rs  denom_validation.rs  deposit_overflow.rs  eip_712.rs  erc_721_happy_path.rs  ethereum_blacklist_test.rs  ethereum_keys.rs  evidence_based_slashing.rs  feegrant.rs  governance_blacklist_test.rs  happy_path.rs  happy_path_v2.rs  ibc_auto_forward.rs  ibc_metadata.rs  ica.rs  ica_hijack.rs  ica_host.rs  ica_security.rs  inflation_knockdown.rs  invalid_deposit.rs  invalid_events.rs  invariants_halt_chain.rs  main.rs  orch_keys.rs  orch_only.rs  param_change_paranoia.rs  pause_bridge.rs  relay_market.rs  send_to_eth_fees.rs  signature_slashing.rs  slashing_delegation.rs  snapshot_manipulation.rs  (+9 more)
solidity/: Dockerfile  contract-deployer.ts  docker-compose.yml  hardhat-first-fork.config.ts  hardhat-second-fork.config.ts  hardhat-third-fork.config.ts  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
solidity/contracts/: CosmosToken.sol  DummyToken.sol  Gravity.sol  GravityERC721.sol  GravityERC721Withdraw.sol  HashingTest.sol  Multicall3.sol  ReentrantERC20.sol  SigningTest.sol  SimpleLogicBatch.sol  TestERC20A.sol  TestERC20B.sol  TestERC20C.sol  TestERC721A.sol  TestFakeGravity.sol  (+5 more)
spec/: slashing-spec.md
tests/: all-up-test-ci.sh  all-up-test.sh  build-container.sh  docker-compose-tests.yml  manual-upgrade-test.sh  run-all-tests.sh  run-eth-fork.sh  run-solidity-test-fork.sh  run-tests.sh  run-upgrade-test.sh  start-chains.sh  upgrade-test.sh
upgrade-tests/: docker-compose.yml  setup-test.sh  start-test.sh
(+460 files in other folders)
