[workspace]
members = ["orchestrator", "cosmos_gravity", "ethereum_gravity", "gravity_utils", "test_runner", "relayer", "gbt", "metrics_exporter", "jsonrpc_server"]
default-members = ["gbt"]
resolver = "2"

[workspace.dependencies]
gravity_proto = "0.4.0"
num256 = "0.5"
clarity = "1.2.3"
web30 = "1.1.2"
deep_space = "2.18"
prost = "0.12"
prost-types = "0.12"
tonic = "0.10"