[package]
name = "cosmos_gravity"
version = "0.1.0"
authors = ["Justin Kilpatrick <justin@althea.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gravity_utils = {path = "../gravity_utils"}
ethereum_gravity = {path = "../ethereum_gravity"}
gravity_proto = {path = "../gravity_proto/"}

deep_space = {git = "https://github.com/oraichain/deep_space.git", rev = "a2e1353"}
clarity = "0.7"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
num256 = "0.5"
log = "0.4"
sha3 = "0.10"
tokio = "1.21"
web30 = {git = "https://github.com/oraichain/web30.git", rev = "5fc5815"}
tonic = "0.8"
bytes = "1.1"
prost-types = "0.11"
prost = "0.11"
num = "0.4.0"

[dev-dependencies]
rand = "0.8"
actix = "0.13"