[package]
name = "cosmos_gravity"
version = "0.1.0"
authors = ["Justin Kilpatrick <justin@althea.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gravity_utils = {path = "../gravity_utils"}
ethereum_gravity = {path = "../ethereum_gravity"}
gravity_proto = {workspace = true}

deep_space = {workspace = true}
clarity = {workspace = true}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
num256 = {workspace = true}
log = "0.4"
sha3 = "0.10"
tokio = "1.4"
web30 = {workspace = true}
tonic = {workspace = true}
bytes = "1.1"
prost-types = {workspace = true}
prost = {workspace = true}
num = "0.4.0"

[dev-dependencies]
env_logger = "0.10"
rand = "0.8"
actix = "0.13"
