[package]
name = "ethereum_gravity"
version = "0.1.0"
authors = ["Justin Kilpatrick <justin@althea.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gravity_utils = {path = "../gravity_utils"}

deep_space = {git ="https://github.com/oraichain/deep_space.git", rev = "18991f6"}
clarity = "0.5"
web30 = "0.22"
num256 = "0.3"
log = "0.4"
sha3 = "0.10"

[dev_dependencies]
rand = "0.8"
actix = "0.13"
