[package]
name = "gbt"
version = "1.8.1"
authors = ["Justin Kilpatrick <justin@althea.net>"]
edition = "2018"
license = "Apache-2.0"
description = "Gravity Bridge Tools. User tooling for the Althea Ethereum <=> Cosmos Gravtiy bridge"
repository = "https://github.com/Gravity-Bridge/Gravity-Bridge"
homepage = "https://gravitybridge.althea.net/"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethereum_gravity = {path = "../ethereum_gravity"}
cosmos_gravity = {path = "../cosmos_gravity"}
gravity_utils = {path = "../gravity_utils"}
gravity_proto = {path = "../gravity_proto/"}
relayer = {path = "../relayer/"}
orchestrator = {path = "../orchestrator/"}
metrics_exporter = {path = "../metrics_exporter/"}

deep_space = {git ="https://github.com/oraichain/deep_space.git", features = ["ethermint"], rev = "a2e1353"}
serde_derive = "1.0"
serde_json = "1.0"
clarity = "0.7"
clap = {version="3.0.0-rc.7", features=["derive"]}
serde = "1.0"
actix-rt = "2.2"
lazy_static = "1"
url = "2"
web30 = {git = "https://github.com/oraichain/web30.git", rev = "5fc5815"}
env_logger = "0.10"
log = "0.4"
openssl-probe = "0.1"
tokio = "1.21"
rand = "0.8"
dirs = "4.0"
toml = "0.5"
prost = "0.11"
futures = "0.3"
tonic = "0.8"
