[package]
name = "gbt"
version = "1.10.0"
authors = ["Justin Kilpatrick <justin@althea.net>"]
edition = "2018"
license = "Apache-2.0"
description = "Gravity Bridge Tools. User tooling for the Althea Ethereum <=> Cosmos Gravtiy bridge"
repository = "https://github.com/Gravity-Bridge/Gravity-Bridge"
homepage = "https://gravitybridge.althea.net/"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethereum_gravity = {path = "../ethereum_gravity"}
cosmos_gravity = {path = "../cosmos_gravity"}
gravity_utils = {path = "../gravity_utils"}
gravity_proto = {workspace = true}
relayer = {path = "../relayer/"}
orchestrator = {path = "../orchestrator/"}
metrics_exporter = {path = "../metrics_exporter/"}

deep_space = {workspace = true, features=["ethermint"]}
serde_derive = "1.0"
serde_json = "1.0"
clarity = {workspace = true}
clap = {version="3", features=["derive"]}
serde = "1.0"
actix-rt = "2.2"
lazy_static = "1"
url = "2"
web30 = {workspace = true}
env_logger = "0.10"
log = "0.4"
openssl-probe = "0.1"
tokio = "1.4"
rand = "0.8"
dirs = "4.0"
toml = "0.5"
prost = {workspace = true}
futures = "0.3"
tonic = {workspace = true}
