[package]
name = "gravity_proto"
version = "0.1.0"
authors = ["Justin Kilpatrick <justin@althea.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.10"
prost-types = "0.10"
cosmos-sdk-proto = {package = "cosmos-sdk-proto-althea", version = "0.11"}
tonic = "0.7"