[package]
name = "gravity_proto"
version = "0.1.0"
authors = ["Justin Kilpatrick <justin@althea.net>"]
edition = "2018"

[features]
bech32ibc = []
ethermint = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11"
prost-types = "0.11"
cosmos-sdk-proto = {git = "https://github.com/oraichain/cosmos-rust", rev = "19f3de7", package = "cosmos-sdk-proto-althea", features = ["bech32ibc", "ethermint"]}
tonic = "0.8"
deep_space = {git ="https://github.com/oraichain/deep_space.git", rev = "18991f6"}
