[package]
name = "gravity_proto"
version = "0.1.0"
authors = ["Justin Kilpatrick <justin@althea.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = {workspace = true}
prost-types = {workspace = true}
cosmos-sdk-proto = {package = "cosmos-sdk-proto-althea", version = "0.14", features = ["bech32ibc", "ethermint"]}
tonic = {workspace = true}
deep_space = {workspace = true}
