[package]
name = "gravity_utils"
version = "0.1.0"
authors = ["Justin Kilpatrick <justin@althea.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gravity_proto = {path = "../gravity_proto/"}

deep_space = { workspace = true }
web30 = { workspace = true }
clarity = "0.7"
num256 = "0.5"
serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"
tokio = "1.21"
tonic = "0.8"
num-bigint = "0.4"
log = "0.4"
url = "2"
sha3 = "0.10"
lazy_static = "1"
num = "0.4.0"

[dev_dependencies]
rand = "0.8"
