[package]
name = "gravity_utils"
version = "0.1.0"
authors = ["Justin Kilpatrick <justin@althea.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gravity_proto = {workspace = true}

deep_space = {workspace = true}
web30 = {workspace = true}
clarity = {workspace = true}
num256 = {workspace = true}
serde_derive = "1.0"
serde = "1.0"
tokio = "1.4"
tonic = {workspace = true}
num-traits = "0.2"
num-bigint = "0.4"
log = "0.4"
url = "2"
sha3 = "0.10"
lazy_static = "1"
futures = "0.3"

[dev-dependencies]
rand = "0.8"
actix = "0.13"
env_logger = "0.10"
