[package]
name = "relayer"
version = "0.4.3"
authors = ["Justin Kilpatrick <justin@althea.net>"]
edition = "2018"

[lib]
name = "relayer"
path = "src/lib.rs"

[dependencies]
ethereum_gravity = {path = "../ethereum_gravity"}
cosmos_gravity = {path = "../cosmos_gravity"}
gravity_utils = {path = "../gravity_utils"}
gravity_proto = {path = "../gravity_proto/"}

deep_space = {git ="https://github.com/oraichain/deep_space.git", rev = "a2e1353"}
serde_derive = "1.0"
clarity = "0.7"
docopt = "1"
serde = "1.0"
actix-rt = "2"
lazy_static = "1"
web30 = {git = "https://github.com/oraichain/web30.git", rev = "5fc5815"}
log = "0.4"
tokio = "1.21"
tonic = "0.8"
openssl-probe = "0.1"
futures = "0.3"
serde_json = "1.0"

[dev-dependencies]
actix = "0.13"
env_logger = "0.10"