[package]
name = "relayer"
version = "0.4.3"
authors = ["Justin Kilpatrick <justin@althea.net>"]
edition = "2018"

[lib]
name = "relayer"
path = "src/lib.rs"

[dependencies]
ethereum_gravity = {path = "../ethereum_gravity"}
cosmos_gravity = {path = "../cosmos_gravity"}
gravity_utils = {path = "../gravity_utils"}
gravity_proto = {workspace = true}

deep_space = {workspace = true}
serde_derive = "1.0"
clarity = {workspace = true}
docopt = "1"
serde = "1.0"
actix-rt = "2"
lazy_static = "1"
web30 = {workspace = true}
num256 = {workspace = true}
log = "0.4"
env_logger = "0.10"
tokio = "1.4"
tonic = {workspace = true}
openssl-probe = "0.1"
futures = "0.3"


[dev-dependencies]
actix = "0.13"
