[package]
name = "test_runner"
version = "0.1.0"
authors = ["Justin Kilpatrick <justin@althea.net>"]
edition = "2018"

# only because I like - more in names
[[bin]]
name = "test-runner"
path = "src/main.rs"

[dependencies]
ethereum_gravity = {path = "../ethereum_gravity"}
cosmos_gravity = {path = "../cosmos_gravity"}
gravity_utils = {path = "../gravity_utils"}
gravity_proto = {workspace = true}
orchestrator = {path = "../orchestrator/"}

bytes = "1"
prost = {workspace = true}
prost-types = {workspace = true}
deep_space = {workspace = true, features = ["ethermint"]}
serde_derive = "1.0"
clarity = {workspace = true}
docopt = "1"
serde = "1.0"
actix = "0.13"
actix-rt = "2.2"
lazy_static = "1"
url = "2"
web30 = {workspace = true}
num = "0.4.0"
num256 = {workspace = true}
log = "0.4"
env_logger = "0.10"
tokio = "1.4.0"
rand = "0.8"
tonic = {workspace = true}
futures = "0.3"
serde_json = "1.0"
ibc-relayer = "0.26.0"
ibc-relayer-types = "0.26.0"
hdpath = "0.6.3"
reqwest = "0.11"
